deployment/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-apm-demo
  labels:
    app.kubernetes.io/managed-by: kubectl
